ADD: finish all the basic post of bash